# omniteleop

./: .gitignore  .pre-commit-config.yaml  README.md  conda_env.yaml  pyproject.toml
scripts/: vis_episode.py
src/omniteleop/common/: __init__.py  config.py  filters.py  schemas.py  trajectory_interpolator.py  vis_utils.py  vr_mode_const.py
src/omniteleop/configs/: vega_1_quest3.yaml  vega_1p_f5d6.yaml  vega_1p_gripper.yaml  vega_1u_f5d6.yaml  vega_1u_gripper.yaml
src/omniteleop/follower/: command_processor.py  robot_controller.py  robotiq.py  vr_robot_controller.py
src/omniteleop/follower/component_processors/: __init__.py  arm_processor.py  base_processor.py  chassis_processor.py  hand_processor.py  head_processor.py  safety_validator.py  torso_processor.py
src/omniteleop/follower/input_handlers/: exo_joycon_handler.py  vr_handler.py
src/omniteleop/follower/input_handlers/control/joycon/: controller.py  end_effectors.py  head_controller.py
src/omniteleop/leader/: arm_reader.py  joycon_reader.py  vr_pose_recorder.py  vr_reader.py
src/omniteleop/leader/communication/: webxr_vr_reader.py
src/omniteleop/leader/web/: vr_client.html
src/omniteleop/record/: mdp_recorder.py  replay_record.py
src/omniteleop/tools/: telemetry_simulator.py  telemetry_viewer.py
tests/: test_vr_ik_sapien.py  test_vr_reading.py
