[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniteleop"
version = "0.4.0"
description = "Universal teleoperation system for robot control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Dexmate Team", email = "contact@dexmate.ai"},
]
keywords = ["robotics", "teleoperation", "exoskeleton", "robot-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "loguru>=0.6.0",
    "rich>=13.0.0",
    "tyro>=0.5.0",
    "pyyaml>=6.0",
    "dexcontrol>=0.4.0",  # Robot control library
    "pytransform3d>=3.14.2",
    "python-socketio>=5.13.0",
    "rerun-sdk>=0.15.0",  # Rerun visualization for robotics data
    "opencv-python>=4.5.0",  # For image processing in recorder
    "dexcomm>=0.4.0",
    "dexmotion>=0.4.0",
    "dexmate-urdf==0.8.0",
    "dextop>=0.4.4",
    "hatch",
    "joycon-lib",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff",
    "pyright",
    "pre-commit",
]

[project.scripts]
omni-arm = "omniteleop.leader.arm_reader:main"
omni-joycon = "omniteleop.leader.joycon_reader:main"
omni-vr = "omniteleop.leader.vr_reader:main"
omni-cmd = "omniteleop.follower.command_processor:main"
omni-robot = "omniteleop.follower.robot_controller:main"
omni-vr-robot = "omniteleop.follower.vr_robot_controller:main"
omni-telemetry = "omniteleop.tools.telemetry_viewer:main"
omni-recorder = "omniteleop.record.mdp_recorder:main"


[tool.hatch.build.targets.wheel]
packages = ["src/omniteleop"]

[tool.hatch.build.targets.sdist]
include = [
    "src/omniteleop",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D2",     # pydocstyle: whitespace conventions
    "D3",     # pydocstyle: blank line conventions
    "D402",   # First line should not be the function's signature
    "D404",   # First word of the docstring should not be "This"
    "D417",   # Missing argument descriptions in the docstring
    "D419",   # Docstring is empty
    "SLF001", # flake8-self: private member access
    "RET501", # Do not explicitly return None in function if it is the only possible return value
    "RET502", # Do not implicitly return None if any branch explicitly returns a value
    "RET503", # Missing explicit return at the end of function able to return non-None value
    "RUF",    # Ruff-specific rules
    "PLC",    # Pylint: convention
    "PLE",    # Pylint: error
    "PLW",    # Pylint: warning
    "PIE",    # flake8-pie
    "FLY",    # flynt: f-string conversion
]
ignore = [
    "D203",    # incompatible with D211 (no-blank-line-before-class)
    "D213",    # incompatible with D212 (multi-line-summary-first-line)
    "E731",    # allow lambda assignments
    "PLC0105", # type parameter variance naming conventions
    "PLW0603", # allow global statements
    "PLW2901", # allow overwriting loop variable
    "RUF010",  # allow f-string without explicit conversion specifiers
    "B035",    # removed in later ruff versions
    "RUF012",  # allow mutable class defaults without ClassVar annotation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
